<resources>
    <string name="app_name">Github User1</string>
    <string name="text_lorem_ipsum_title">Lorem ipsum dolor sit amet</string>
    <string name="text_lorem_ipsum_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="text_home_title">Github User</string>
    <string name="text_profile">Profile</string>
    <string name="text_repository">Repository</string>
    <string name="text_followers">Followers</string>
    <string name="text_following">Following</string>
    <string name="text_find_your_favourite_dev">Find your favourite dev!</string>
    <string name="text_splash_footer">Copyright 2021 | Github User App</string>
    <string name="text_btn_retry">Retry</string>
    <string name="text_search_user">Search github user</string>
    <string name="text_not_available">N/A</string>
    <string name="text_added_to_favourite">Added to favourite</string>
    <string name="text_removed_from_favourite">Removed from favourite</string>
    <string name="text_favourite">Favourite User</string>
    <string name="text_no_data_found">Sorry, no data found :(</string>

    <!-- String resource error -->
    <string name="error_bad_request">%d: Bad request!</string>
    <string name="error_not_authorize">%d: Not authorize!</string>
    <string name="error_not_found">%d: Resource not found!</string>
    <string name="error_internal_server_error">%d: Internal server error!</string>
    <string name="error_unknown_host">No address associated with hostname!</string>
    <string name="error_connection">Please check your internet connection!</string>
    <string name="error_http_failure">Http response failure with status code %d</string>
    <string name="error_unknown">Something when wrong please try again later!</string>

    <!-- Other string resources-->
    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <integer-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </integer-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <integer-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </integer-array>

    <integer-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </integer-array>

    <string-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </string-array>

</resources>