<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srlRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/bg_layout_header"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/layoutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@drawable/bg_rounded_button_dark"
                    android:contentDescription="@string/app_name"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_back"
                    android:visibility="visible"
                    app:tint="@color/colorIconWhite100" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionSearch"
                    android:text="@string/text_lorem_ipsum_title"
                    app:iconifiedByDefault="false"
                    app:queryHint="@string/text_search_user" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>


        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:shimmer_base_alpha="0.6"
            app:shimmer_highlight_alpha="0.3">

            <include
                android:id="@+id/shimmerPlaceholder"
                layout="@layout/fragment_home_placeholder"
                android:elevation="@dimen/_5sdp"
                android:visibility="invisible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:elevation="@dimen/_5sdp"
                android:orientation="vertical"
                android:paddingStart="@dimen/_4sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_4sdp"
                android:paddingBottom="?actionBarSize"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_card_user" />

        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>