<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srlRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.UserDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/bg_layout_header"
            android:elevation="@dimen/_4sdp"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/layoutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@drawable/bg_rounded_button_dark"
                    android:contentDescription="@string/app_name"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_back"
                    android:visibility="visible"
                    app:tint="@color/colorIconWhite100" />

                <TextView
                    android:id="@+id/tvHeaderTitle"
                    style="@style/Header.H3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_lorem_ipsum_title" />

                <ImageButton
                    android:id="@+id/btnAddFavourite"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:background="@android:color/transparent"
                    android:clipToPadding="false"
                    android:contentDescription="@string/app_name"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_favourite_border"
                    android:visibility="visible"
                    app:tint="@color/colorIconWhite100" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_12sdp"
            android:elevation="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:shimmer_base_alpha="0.6"
            app:shimmer_highlight_alpha="0.3">

            <include
                android:id="@+id/shimmerPlaceholder"
                layout="@layout/fragment_user_detail_placeholder"
                android:visibility="invisible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/userDetailContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_4sdp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/ivAvatar"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_placeholder"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:riv_border_color="@color/colorPrimaryGrey60"
                    app:riv_border_width="@dimen/_2sdp"
                    app:riv_corner_radius="@dimen/_50sdp"
                    app:riv_mutate_background="true"
                    tools:src="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:baselineAligned="false"
                    app:layout_constraintBottom_toBottomOf="@+id/ivAvatar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivAvatar"
                    app:layout_constraintTop_toTopOf="@+id/ivAvatar">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvRepositoryCount"
                            style="@style/Header.H3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="@color/colorTextBlack100"
                            tools:text="0" />

                        <TextView
                            style="@style/Text.Subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_repository" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvFollowersCount"
                            style="@style/Header.H3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="@color/colorTextBlack100"
                            tools:text="0" />

                        <TextView
                            style="@style/Text.Subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_followers" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvFollowingCount"
                            style="@style/Header.H3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="@color/colorTextBlack100"
                            tools:text="0" />

                        <TextView
                            style="@style/Text.Subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_following" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutUserInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/ivAvatar"
                    app:layout_constraintTop_toBottomOf="@+id/ivAvatar">

                    <TextView
                        android:id="@+id/tvItemTitle"
                        style="@style/Text.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/text_lorem_ipsum_title" />

                    <TextView
                        android:id="@+id/tvItemSubtitle"
                        style="@style/Text.Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        tools:text="@string/text_lorem_ipsum_title" />

                    <TextView
                        android:id="@+id/tvItemLocation"
                        style="@style/Text.Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:drawableStart="@drawable/ic_location"
                        android:drawablePadding="@dimen/_4sdp"
                        android:gravity="center_vertical"
                        tools:text="@string/text_lorem_ipsum_title" />

                    <TextView
                        android:id="@+id/tvItemCompany"
                        style="@style/Text.Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:drawableStart="@drawable/ic_work_bag"
                        android:drawablePadding="@dimen/_4sdp"
                        android:gravity="center_vertical"
                        tools:text="@string/text_lorem_ipsum_title" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_layout_header_2"
            android:elevation="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shimmerContainer"
            app:tabIndicatorColor="@color/colorIconWhite100"
            app:tabTextColor="@android:color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>